force-app/main/default/objects/Expense_PL_Allocation__c/Expense_PL_Allocation__c.object-meta.xml
<CustomObject>
    <label>Expense GL Allocation</label>
    <nameField>
        <displayFormat>EPLA-{000000}-{000}</displayFormat>
        <label>Expense P&amp;L Allocation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expense GL Allocations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>