force-app/main/default/objects/Expense_PL_Allocation__c/fields/Expense_Detail__c.field-meta.xml
<CustomField>
    <fullName>Expense_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Expense Detail</label>
    <referenceTo>Expense_Detail__c</referenceTo>
    <relationshipLabel>Expense GL Allocations</relationshipLabel>
    <relationshipName>Expense_P_L_Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>