force-app/main/default/objects/Expense_PL_Allocation__c/fields/GL_Code__c.field-meta.xml
<CustomField>
    <fullName>GL_Code__c</fullName>
    <label>GL Account</label>
    <referenceTo>GL_Code__c</referenceTo>
    <relationshipLabel>Expense GL Allocations</relationshipLabel>
    <relationshipName>Expense_P_L_Allocations</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>