force-app/main/default/objects/Expense_PL_Allocation__c/fields/GL_Code_Sequence__c.field-meta.xml
<CustomField>
    <fullName>GL_Code_Sequence__c</fullName>
    <formula>GL_Code__r.Sequence__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GL Code Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>