force-app/main/default/objects/Expense_PL_Allocation__c/fields/MonthAndYear__c.field-meta.xml
<CustomField>
    <fullName>MonthAndYear__c</fullName>
    <formula>Text(PL_Month__c) + &#39;:&#39; + Text(PL_Year__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MonthAndYear</label>
    <type>Text</type>
</CustomField>