force-app/main/default/objects/Expense_PL_Allocation__c/fields/Number_of_Employee__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Employee__c</fullName>
    <label>Number of Employee</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>