force-app/main/default/objects/Expense_PL_Allocation__c/fields/P_L__c.field-meta.xml
<CustomField>
    <fullName>P_L__c</fullName>
    <label>P&amp;L</label>
    <referenceTo>Profit_Loss__c</referenceTo>
    <relationshipName>Expense_Allocations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>