force-app/main/default/objects/Expense_PL_Allocation__c/fields/P_L_Name__c.field-meta.xml
<CustomField>
    <fullName>P_L_Name__c</fullName>
    <formula>P_L__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>P&amp;L Name</label>
    <type>Text</type>
</CustomField>