force-app/main/default/objects/Expense_PL_Allocation__c/fields/PL_Year__c.field-meta.xml
<CustomField>
    <fullName>PL_Year__c</fullName>
    <formula>YEAR(P_L__r.Period_Start_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PL Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>