force-app/main/default/objects/Expense_PL_Allocation__c/fields/PlMonthStartDate__c.field-meta.xml
<CustomField>
    <fullName>PlMonthStartDate__c</fullName>
    <formula>P_L__r.Period_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PlMonthStartDate</label>
    <type>Date</type>
</CustomField>