force-app/main/default/objects/Expense_PL_Allocation__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bonus</fullName>
            </value>
            <value>
                <fullName>Payroll Tax</fullName>
            </value>
            <value>
                <fullName>Wage</fullName>
            </value>
            <value>
                <fullName>Expense Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>