force-app/main/default/objects/Expense_PL_Allocation__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Expense GL Allocations</relationshipLabel>
    <relationshipName>Expense_P_L_Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>