force-app/main/default/objects/Expense_PL_Allocation__c/fields/Wage__c.field-meta.xml
<CustomField>
    <fullName>Wage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Wage</label>
    <referenceTo>Wages__c</referenceTo>
    <relationshipName>Wage_Expense_Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>