force-app/main/default/objects/Expense_PL_Allocation__c/fields/Wage_P_L_Date__c.field-meta.xml
<CustomField>
    <fullName>Wage_P_L_Date__c</fullName>
    <formula>Wage__r.P_L_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Wage P&amp;L Date</label>
    <type>Date</type>
</CustomField>