force-app/main/default/objects/Expense_PL_Allocation__c/recordTypes/Non_Wage.recordType-meta.xml
<RecordType>
    <fullName>Non_Wage</fullName>
    <active>true</active>
    <label>Non-Wage</label>
</RecordType>