force-app/main/default/objects/Expense_PL_Allocation__c/recordTypes/Wage_Net_Wage.recordType-meta.xml
<RecordType>
    <fullName>Wage_Net_Wage</fullName>
    <active>true</active>
    <description>Allocation of Net Wage from Wages</description>
    <label>Wage - Net Wage</label>
</RecordType>